--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook",
-    "server": "node ./server.js"
+    "server": "node %NODE_DEBUG_OPTION% ./server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
