--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PUBLIC_URL=.
-NODE_PATH=src
 BROWSER=none
 GENERATE_SOURCEMAP=false
 IS_BROWSER=true
+REACT_APP_PARSE_SERVER_URL='http://localhost:1337/parse'
