--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "codemirror": "^5.48.2",
     "express": "latest",
     "graphql": "^14.4.2",
+    "history": "^4.9.0",
     "parse": "^2.6.0",
     "parse-dashboard": "^1.4.3",
     "parse-server": "^3.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4"
