--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": "client",
     "target": "ES6",
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true
   },
   "include": [
-    "src"
+    "client"
   ],
   "exclude": [
     "build",
