--- a/package.json
+++ b/package.json
@@ -6,28 +6,29 @@
     "packages/*"
   ],
   "dependencies": {
+    "@babel/runtime": "^7.6.0",
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.0",
-    "antd": "^3.23.2",
     "codemirror": "^5.48.2",
     "collections": "^5.1.9",
     "express": "latest",
     "graphql": "^14.4.2",
     "history": "^4.9.0",
+    "mui-datatables": "^2.11.1",
     "parse": "^2.7.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "webpack-dev-server": "^3.8.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "webpack-dev-server",
+    "build": "webpack",
+    "test": "jest",
     "storybook": "start-storybook",
     "server": "node %NODE_DEBUG_OPTION% ./server"
   },
@@ -47,9 +48,14 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.0",
     "@storybook/react": "^5.1.10",
     "babel-plugin-relay": "^2.0.0-rc.2",
-    "typescript": "^3.5.3"
+    "merge-deep": "^3.0.2",
+    "typescript": "^3.5.3",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.8"
   }
 }
