--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@babel/runtime": "^7.6.0",
     "@feathersjs/authentication": "^4.3.0",
+    "@feathersjs/authentication-client": "^4.3.2",
     "@feathersjs/authentication-local": "^4.3.0",
     "@feathersjs/authentication-oauth": "^4.3.0",
     "@feathersjs/configuration": "^4.3.0",
