--- a/package.json
+++ b/package.json
@@ -29,19 +29,24 @@
     "graphql": "^14.4.2",
     "helmet": "^3.20.0",
     "history": "^4.9.0",
+    "mini-create-react-context": "^0.3.2",
     "mongodb": "^3.3.1",
     "mongodb-core": "^3.2.7",
     "mui-datatables": "^2.11.1",
     "notistack": "^0.9.0",
     "parse": "^2.7.1",
+    "path-to-regexp": "^3.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
+    "resolve-pathname": "^3.0.0",
     "serve-favicon": "^2.5.0",
     "socket.io-client": "^2.2.0",
+    "tiny-invariant": "^1.0.6",
     "uuid": "^3.3.3",
+    "value-equal": "^1.0.1",
     "webpack-dev-server": "^3.8.1",
     "winston": "^3.0.0"
   },
@@ -77,6 +82,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "jest": "^24.9.0",
     "merge-deep": "^3.0.2",
     "nodemon": "^1.19.1",
     "typescript": "^3.5.3",
