--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "collections": "^5.1.9",
-    "history": "^4.10.1",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "collections": "^5.1.9"
   },
   "devDependencies": {
     "jest": "^24.9.0"
