--- a/packages/internal/package.json
+++ b/packages/internal/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "node ../tools/babel-build.js ./index.js"
+  },
   "dependencies": {
     "react": "^16.10.1",
     "react-dom": "^16.10.1"
