--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "postinstall": "lerna bootstrap"
+    "postinstall": "lerna bootstrap --npm-client=yarn"
   },
   "devDependencies": {
     "lerna": "^3.16.4"
