--- a/packages/internal/package.json
+++ b/packages/internal/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "node ../tools/babel-build.js ./index.js"
+    "build": "node ../tools/babel-build.js --name doce.internal --entry ./index.js"
   },
   "dependencies": {
     "react": "^16.10.1",
