--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -8,6 +8,7 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
+    "commander": "^3.0.2",
     "mkdirp": "^0.5.1"
   }
 }
