--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,20 +1,41 @@
 {
   "name": "@doce/server",
   "version": "1.0.0",
-  "main": ".",
+  "main": "src",
   "directories": {
-    "lib": ".",
+    "lib": "src",
     "test": "test/",
     "config": "config/"
   },
   "scripts": {
     "test": "yarn run eslint && yarn run jest",
+    "eslint": "eslint src/. test/. --config .eslintrc.json",
+    "dev": "nodemon src/",
+    "start": "node src/",
     "jest": "jest  --forceExit"
   },
   "dependencies": {
-    "feathers-mongodb": "^5.0.0"
+    "@feathersjs/authentication": "^4.3.0-pre.3",
+    "@feathersjs/authentication-local": "^4.3.0-pre.3",
+    "@feathersjs/authentication-oauth": "^4.3.0-pre.3",
+    "@feathersjs/configuration": "^4.3.0-pre.3",
+    "@feathersjs/errors": "^4.3.0-pre.3",
+    "@feathersjs/express": "^4.3.0-pre.3",
+    "@feathersjs/feathers": "^4.3.0-pre.3",
+    "@feathersjs/socketio": "^4.3.0-pre.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "feathers-mongodb": "^5.0.0",
+    "helmet": "^3.20.0",
+    "mongodb": "^3.2.7",
+    "mongodb-core": "^3.2.7",
+    "serve-favicon": "^2.5.0",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "axios": "^0.19.0",
+    "eslint": "^6.1.0",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.1"
   }
 }
