--- a/packages/codesandbox-app/package.json
+++ b/packages/codesandbox-app/package.json
@@ -44,6 +44,7 @@
     "graphql-tag": "^2.10.1",
     "gsap": "^2.1.3",
     "http-browserify": "^1.7.0",
+    "immer": "^4.0.1",
     "immutability-helper": "^3.0.1",
     "instantsearch.css": "^7.3.1",
     "jszip": "^3.2.2",
