--- a/packages/codesandbox-app/package.json
+++ b/packages/codesandbox-app/package.json
@@ -38,6 +38,7 @@
     "downshift": "^3.3.4",
     "embed": "^0.0.1",
     "file-saver": "^2.0.2",
+    "filesize": "^5.0.3",
     "fuse.js": "^3.4.5",
     "geniejs": "^0.5.1",
     "graphql": "0.11.7 || ^0.12.0 || ^0.13.0 || ^14.0.0",
@@ -54,6 +55,7 @@
     "overmind": "^19.2.0",
     "overmind-react": "^20.2.0",
     "phoenix": "^1.4.10",
+    "qrcode.react": "^0.9.3",
     "rc-slider": "^8.7.1",
     "react": "^15.5.4 || ^16.0.0-0",
     "react-apollo": "^3.1.2",
