--- a/packages/codesandbox-app/package.json
+++ b/packages/codesandbox-app/package.json
@@ -13,6 +13,9 @@
   "alias": {
     "app": "~"
   },
+  "browserslist": [
+    "last 10 Chrome versions"
+  ],
   "scripts": {
     "start": "parcel index.html"
   },
@@ -44,6 +47,7 @@
     "graphql": "0.11.7 || ^0.12.0 || ^0.13.0 || ^14.0.0",
     "graphql-tag": "^2.10.1",
     "gsap": "^2.1.3",
+    "history": "^4.10.1",
     "http-browserify": "^1.7.0",
     "immer": "^4.0.1",
     "immutability-helper": "^3.0.1",
@@ -52,6 +56,7 @@
     "lodash-es": "^4.17.15",
     "match-sorter": "^4.0.2",
     "normalize.css": "^8.0.1",
+    "ot": "^0.0.15",
     "overmind": "^19.2.0",
     "overmind-react": "^20.2.0",
     "phoenix": "^1.4.10",
