--- a/packages/codesandbox-app/package.json
+++ b/packages/codesandbox-app/package.json
@@ -7,14 +7,17 @@
       "@babel/preset-react"
     ],
     "plugins": [
-      "@babel/plugin-proposal-class-properties"
+      "@babel/plugin-proposal-class-properties",
+      "babel-plugin-styled-components"
     ]
   },
   "alias": {
     "app": "~"
   },
   "browserslist": [
-    "last 10 Chrome versions"
+    ">0.25%",
+    "ie 11",
+    "not op_mini all"
   ],
   "scripts": {
     "start": "parcel index.html"
@@ -23,6 +26,8 @@
     "@apollo/react-hooks": "^3.1.2",
     "@codesandbox/common": "^1.0.8",
     "@codesandbox/notifications": "^1.0.6",
+    "@doce/hooks": "^1.0.0",
+    "@doce/theme": "^1.0.0",
     "@typeform/embed": "^0.13.1",
     "@types/react": "^16.8.0",
     "ansi-html": "^0.0.7",
@@ -89,6 +94,7 @@
     "@babel/core": "^7.6.3",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-react": "^7.6.3",
+    "babel-plugin-styled-components": "^1.10.6",
     "parcel-bundler": "^1.12.4",
     "typescript": "^3.6.3"
   }
