--- a/packages/codesandbox-app/package.json
+++ b/packages/codesandbox-app/package.json
@@ -33,6 +33,7 @@
     "ansi-html": "^0.0.7",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
     "apollo-link-batch-http": "^1.2.13",
     "apollo-link-context": "^1.0.19",
     "apollo-link-error": "^1.1.12",
