--- a/packages/codesandbox-common/package.json
+++ b/packages/codesandbox-common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@codesandbox/common",
+  "name": "@codesandbox/common-frozen",
   "version": "1.0.8",
   "repository": {
     "type": "git",
