--- a/packages/codesandbox-app/package.json
+++ b/packages/codesandbox-app/package.json
@@ -26,8 +26,7 @@
     "@apollo/react-hooks": "^3.1.2",
     "@codesandbox/common": "^1.0.8",
     "@codesandbox/notifications": "^1.0.6",
-    "@doce/hooks": "^1.0.0",
-    "@doce/theme": "^1.0.0",
+    "@emmetio/codemirror-plugin": "^0.5.4",
     "@typeform/embed": "^0.13.1",
     "@types/react": "^16.8.0",
     "airtable": "^0.7.1",
@@ -48,6 +47,7 @@
     "date-fns": "^2.4.1",
     "downshift": "^3.3.4",
     "embed": "^0.0.1",
+    "eslint-plugin-vue": "^5.2.3",
     "file-saver": "^2.0.2",
     "filesize": "^5.0.3",
     "fuse.js": "^3.4.5",
@@ -93,6 +93,7 @@
     "store": "^2.0.12",
     "styled-components": "^4.4.0",
     "subworkers": "^1.0.1",
+    "vue-eslint-parser": "^6.0.4",
     "xterm": "^4.1.0"
   },
   "devDependencies": {
@@ -113,6 +114,7 @@
     "typescript": "^3.6.3",
     "webpack": "^4.41.1",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "webpack-dev-server": "^3.8.2",
+    "worker-loader": "^2.0.0"
   }
 }
