--- a/packages/codesandbox-app/package.json
+++ b/packages/codesandbox-app/package.json
@@ -20,13 +20,14 @@
     "not op_mini all"
   ],
   "scripts": {
-    "start": "webpack-dev-server"
+    "dev": "webpack-dev-server"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
     "@codesandbox/common": "^1.0.8",
     "@codesandbox/notifications": "^1.0.6",
     "@emmetio/codemirror-plugin": "^0.5.4",
+    "@feathersjs/client": "^4.3.5",
     "@typeform/embed": "^0.13.1",
     "@types/react": "^16.8.0",
     "airtable": "^0.7.1",
@@ -90,6 +91,7 @@
     "react-split-pane": "^0.1.87",
     "react-stripe-elements": "^5.0.1",
     "react-use": "^12.3.0",
+    "socket.io-client": "^2.3.0",
     "store": "^2.0.12",
     "styled-components": "^4.4.0",
     "subworkers": "^1.0.1",
