--- a/packages/codesandbox-app/package.json
+++ b/packages/codesandbox-app/package.json
@@ -20,7 +20,8 @@
     "not op_mini all"
   ],
   "scripts": {
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "babel:build": "node ../tools/babel-build.js"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
