--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -5,15 +5,17 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.6.2",
+    "@babel/generator": "^7.6.4",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime-corejs3": "^7.6.3",
+    "@babel/traverse": "^7.6.3",
     "commander": "^3.0.2",
+    "html-webpack-plugin": "^3.2.0",
     "merge-deep": "^3.0.2",
     "mkdirp": "^0.5.1",
-    "webpack": "^4.41.1",
-    "html-webpack-plugin": "^3.2.0",
     "svg-inline-loader": "^0.8.0",
-    "@babel/runtime-corejs3": "^7.6.3"
+    "webpack": "^4.41.1"
   }
 }
