--- a/packages/codesandbox-common-js/package.json
+++ b/packages/codesandbox-common-js/package.json
@@ -2,5 +2,13 @@
   "name": "@codesandbox/common",
   "version": "1.0.8",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^16.10.2"
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^5.2.4",
+    "@storybook/addon-knobs": "^5.2.4",
+    "@storybook/react": "^5.2.4"
+  }
 }
