--- a/packages/codesandbox-app/package.json
+++ b/packages/codesandbox-app/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-vue": "^5.2.3",
     "file-saver": "^2.0.2",
     "filesize": "^5.0.3",
+    "fontfaceobserver": "^2.1.0",
     "fuse.js": "^3.4.5",
     "geniejs": "^0.5.1",
     "graphql": "0.11.7 || ^0.12.0 || ^0.13.0 || ^14.0.0",
@@ -102,6 +103,7 @@
   "devDependencies": {
     "@babel/core": "^7.6.3",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-export-default-from": "^7.5.2",
     "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-react": "^7.6.3",
