--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "test": "yarn run eslint && yarn run jest",
     "eslint": "eslint src/. test/. --config .eslintrc.json",
-    "dev": "nodemon src/",
-    "start": "node src/",
+    "start": "nodemon src/",
+    "serve": "node src/",
     "jest": "jest  --forceExit"
   },
   "dependencies": {
