--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -29,6 +29,7 @@
     "@csb/common": "^1.0.8",
     "@emmetio/codemirror-plugin": "^0.5.4",
     "@feathersjs/client": "^4.3.5",
+    "@muggle/hooks": "^1.0.0",
     "@muggle/icons": "^1.0.0",
     "@typeform/embed": "^0.13.1",
     "@types/react": "^16.8.0",
