--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
     "@codesandbox/notifications": "^1.0.6",
+    "@codesandbox/template-icons": "^1.0.2",
     "@csb/common": "^1.0.8",
     "@emmetio/codemirror-plugin": "^0.5.4",
     "@feathersjs/client": "^4.3.5",
@@ -73,6 +74,7 @@
     "match-sorter": "^4.0.2",
     "merge-deep": "^3.0.2",
     "mobx": "^5.14.0",
+    "node-services": "^0.0.3",
     "normalize.css": "^8.0.1",
     "ot": "^0.0.15",
     "overmind": "^19.2.0",
@@ -82,6 +84,7 @@
     "rc-slider": "^8.7.1",
     "react": "^15.5.4 || ^16.0.0-0",
     "react-apollo": "^3.1.2",
+    "react-color": "^2.17.3",
     "react-day-picker": "^7.3.2",
     "react-devtools-inline": "^4.2.0",
     "react-dnd": "^9.4.0",
@@ -98,7 +101,9 @@
     "react-show": "^3.0.4",
     "react-split-pane": "^0.1.87",
     "react-stripe-elements": "^5.0.1",
+    "react-tagsinput": "^3.19.0",
     "react-use": "^12.3.0",
+    "reakit": "^1.0.0-beta.9",
     "socket.io-client": "^2.3.0",
     "store": "^2.0.12",
     "styled-components": "^4.4.0",
