--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cs/app",
+  "name": "@csb/app",
   "version": "1.0.0",
   "license": "ISC",
   "babel": {
@@ -103,6 +103,7 @@
     "react-stripe-elements": "^5.0.1",
     "react-tagsinput": "^3.19.0",
     "react-use": "^12.3.0",
+    "react-virtualized": "^9.21.1",
     "reakit": "^1.0.0-beta.9",
     "socket.io-client": "^2.3.0",
     "store": "^2.0.12",
