--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -79,6 +79,7 @@
     "ot": "^0.0.15",
     "overmind": "^19.2.0",
     "overmind-react": "^21.0.0",
+    "path-to-regexp": "^3.1.0",
     "phoenix": "^1.4.10",
     "qrcode.react": "^0.9.3",
     "rc-slider": "^8.7.1",
@@ -122,6 +123,7 @@
     "@babel/runtime-corejs3": "^7.6.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
+    "buffer-loader": "^0.1.0",
     "css-loader": "^3.2.0",
     "del-cli": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
