--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "bin": {
+    "tools/babel": "./babel/index.js"
+  },
   "dependencies": {
     "@babel/core": "^7.6.2",
     "@babel/generator": "^7.6.4",
