--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -121,6 +121,7 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-react": "^7.6.3",
     "@babel/runtime-corejs3": "^7.6.3",
+    "@muggle/tools": "^1.0.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
     "buffer-loader": "^0.1.0",
