--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -3,7 +3,28 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "babel-node ./index.js",
+    "build": "yarn clean && yarn babel --root-mode upward src -d lib --copy-files",
+    "build:dev": "yarn build",
+    "clean": "rimraf lib",
+    "prepublish": "yarn build",
+    "babel:build": "node ../../packages/tools/babel -d ./lib -n @csb/common"
+  },
   "dependencies": {
     "node-fetch": "^2.6.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/node": "^7.6.3",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-async-to-generator": "^7.5.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "babel-plugin-system-import-transformer": "^4.0.0",
+    "rimraf": "^3.0.0",
+    "yarn": "^1.19.1"
   }
 }
