--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -24,7 +24,6 @@
     "@babel/plugin-transform-async-to-generator": "^7.5.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "babel-plugin-system-import-transformer": "^4.0.0",
-    "rimraf": "^3.0.0",
-    "yarn": "^1.19.1"
+    "rimraf": "^3.0.0"
   }
 }
