--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -16,12 +16,14 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime-corejs3": "^7.6.3",
     "@babel/traverse": "^7.6.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "commander": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "merge-deep": "^3.0.2",
     "mkdirp": "^0.5.1",
     "mongodb": "^3.3.2",
     "recursive-readdir": "^2.2.2",
+    "resolve": "^1.12.0",
     "rollup": "^1.25.0",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.41.1"
