--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -127,6 +127,7 @@
     "buffer-loader": "^0.1.0",
     "css-loader": "^3.2.0",
     "del-cli": "^3.0.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "merge-deep": "^3.0.2",
     "parcel-bundler": "^1.12.4",
