--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -18,6 +18,7 @@
     "@babel/traverse": "^7.6.3",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "commander": "^3.0.2",
+    "enhanced-resolve": "^4.1.1",
     "html-webpack-plugin": "^3.2.0",
     "merge-deep": "^3.0.2",
     "mkdirp": "^0.5.1",
