--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -17,6 +17,7 @@
     "@babel/runtime-corejs3": "^7.6.3",
     "@babel/traverse": "^7.6.3",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "babel-preset-minify": "^0.5.1",
     "commander": "^3.0.2",
     "enhanced-resolve": "^4.1.1",
     "html-webpack-plugin": "^3.2.0",
