--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -45,6 +45,7 @@
     "app": "^0.1.0",
     "axios": "^0.19.0",
     "browser-detect": "^0.2.28",
+    "bufferutil": "^4.0.1",
     "codemirror": "^5.49.0",
     "codesandbox-api": "^0.0.23",
     "codesandbox-import-utils": "^2.1.9",
@@ -124,6 +125,7 @@
     "@muggle/tools": "^1.0.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
+    "babel-preset-minify": "^0.5.1",
     "buffer-loader": "^0.1.0",
     "css-loader": "^3.2.0",
     "del-cli": "^3.0.0",
