--- a/packages/codesandbox-common/package.json
+++ b/packages/codesandbox-common/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "codesandbox-api": "^0.0.22",
     "color": "^3.1.2",
+    "core-js": "^3.3.6",
     "date-fns": "^2.0.0",
     "error-polyfill": "^0.1.1",
     "humps": "CompuIves/humps",
