--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -107,6 +107,7 @@
     "react-use": "^12.3.0",
     "react-virtualized": "^9.21.1",
     "reakit": "^1.0.0-beta.9",
+    "shortid": "^2.2.15",
     "socket.io-client": "^2.3.0",
     "store": "^2.0.12",
     "styled-components": "^4.4.0",
