--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -61,6 +61,7 @@
     "fontfaceobserver": "^2.1.0",
     "fuse.js": "^3.4.5",
     "geniejs": "^0.5.1",
+    "glamor": "^2.20.40",
     "graphql": "0.11.7 || ^0.12.0 || ^0.13.0 || ^14.0.0",
     "graphql-tag": "^2.10.1",
     "gsap": "^2.1.3",
@@ -75,8 +76,10 @@
     "match-sorter": "^4.0.2",
     "merge-deep": "^3.0.2",
     "mobx": "^5.14.0",
+    "monaco-textmate": "^3.0.1",
     "node-services": "^0.0.3",
     "normalize.css": "^8.0.1",
+    "onigasm": "^2.2.2",
     "ot": "^0.0.15",
     "overmind": "^19.2.0",
     "overmind-react": "^21.0.0",
@@ -93,6 +96,7 @@
     "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^15.5.4 || ^16.0.0-0",
     "react-helmet": "^5.2.1",
+    "react-icon-base": "^2.1.2",
     "react-icons": "^3.7.0",
     "react-input-autosize": "^2.2.2",
     "react-instantsearch": "^5.7.0",
@@ -134,6 +138,7 @@
     "html-webpack-plugin": "^3.2.0",
     "merge-deep": "^3.0.2",
     "parcel-bundler": "^1.12.4",
+    "raw-loader": "^3.1.0",
     "rimraf": "^3.0.0",
     "style-loader": "^1.0.0",
     "svg-react-loader": "^0.4.6",
