--- a/packages/node-services/package.json
+++ b/packages/node-services/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "node-services",
-  "version": "0.0.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/codesandbox/codesandbox-client",
-    "directory": "packages/node-services"
-  },
-  "scripts": {
-    "build": "tsc",
-    "build:dev": "yarn build",
-    "start": "tsc --watch -p ./tsconfig.json"
-  },
-  "dependencies": {
-    "@codesandbox/common": "^1.0.8",
-    "constants-browserify": "^1.0.0",
-    "events": "^3.0.0",
-    "resolve": "^1.10.0",
-    "string_decoder": "^1.3.0",
-    "util": "^0.12.1",
-    "ws": "^6.1.0"
-  },
-  "devDependencies": {
-    "@types/events": "^1.2.0",
-    "@types/node": "^11.10.5",
-    "@types/resolve": "^0.0.8",
-    "@types/ws": "^6.0.1",
-    "typescript": "3.6.3"
-  }
+	"name": "node-services",
+	"version": "1.0.0",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/codesandbox/codesandbox-client",
+		"directory": "packages/node-services"
+	},
+	"scripts": {
+		"build": "yarn clean && yarn babel --root-mode upward src -d lib --copy-files",
+    "clean": "rimraf lib",
+    "prepublish": "yarn build",
+    "start": "yarn build --watch"
+	},
+	"dependencies": {
+		"@csb/common": "^1.0.8",
+		"constants-browserify": "^1.0.0",
+		"events": "^3.0.0",
+		"resolve": "^1.10.0",
+		"string_decoder": "^1.3.0",
+		"util": "^0.12.1",
+		"ws": "^6.1.0"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.2.3",
+		"@babel/core": "^7.5.5",
+		"@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-async-to-generator": "^7.5.0",
+		"@babel/plugin-transform-runtime": "^7.5.5",
+		"@babel/preset-env": "^7.5.5"
+	}
 }
