--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -47,7 +47,9 @@
     "browser-detect": "^0.2.28",
     "bufferutil": "^4.0.1",
     "codemirror": "^5.49.0",
+    "codesandbox": "^2.1.10",
     "codesandbox-api": "^0.0.23",
+    "codesandbox-deps": "^0.1.1",
     "codesandbox-import-utils": "^2.1.9",
     "color": "^3.1.2",
     "compare-versions": "^3.5.1",
