--- a/packages/codesandbox-deps/package.json
+++ b/packages/codesandbox-deps/package.json
@@ -13,7 +13,8 @@
     "build": "yarn build:clean && yarn build:rollup",
     "build:dev": "yarn build",
     "build:clean": "rimraf dist",
-    "build:rollup": "rollup -c"
+    "build:rollup": "rollup -c",
+    "prepublish": "yarn build"
   },
   "dependencies": {
     "tern": "^0.21.0"
