--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -45,6 +45,7 @@
     "app": "^0.1.0",
     "axios": "^0.19.0",
     "browser-detect": "^0.2.28",
+    "browserfs": "^1.4.3",
     "bufferutil": "^4.0.1",
     "codemirror": "^5.49.0",
     "codesandbox": "^2.1.10",
