--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -34,6 +34,8 @@
     "@muggle/icons": "^1.0.0",
     "@typeform/embed": "^0.13.1",
     "@types/react": "^16.8.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
     "airtable": "^0.7.1",
     "ansi-html": "^0.0.7",
     "apollo-cache-inmemory": "^1.6.3",
@@ -44,6 +46,7 @@
     "apollo-link-error": "^1.1.12",
     "app": "^0.1.0",
     "axios": "^0.19.0",
+    "babel-eslint": "^10.0.3",
     "browser-detect": "^0.2.28",
     "browserfs": "^1.4.3",
     "bufferutil": "^4.0.1",
@@ -58,6 +61,11 @@
     "date-fns": "^2.4.1",
     "downshift": "^3.3.4",
     "embed": "^0.0.1",
+    "eslint": "^6.6.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.2.0",
     "eslint-plugin-vue": "^5.2.3",
     "file-saver": "^2.0.2",
     "filesize": "^5.0.3",
@@ -79,6 +87,7 @@
     "match-sorter": "^4.0.2",
     "merge-deep": "^3.0.2",
     "mobx": "^5.14.0",
+    "module": "^1.2.5",
     "monaco-textmate": "^3.0.1",
     "node-services": "^1.0.0",
     "normalize.css": "^8.0.1",
