--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -123,6 +123,7 @@
     "react-use": "^12.3.0",
     "react-virtualized": "^9.21.1",
     "reakit": "^1.0.0-beta.9",
+    "resize-observer-polyfill": "^1.5.1",
     "shortid": "^2.2.15",
     "socket.io-client": "^2.3.0",
     "store": "^2.0.12",
@@ -130,7 +131,8 @@
     "subworkers": "^1.0.1",
     "vscode-textmate": "4.3.0",
     "vue-eslint-parser": "^6.0.4",
-    "xterm": "^4.1.0"
+    "xterm": "^4.1.0",
+    "xterm-addon-fit": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.3",
