--- a/projects/codesandbox-app/package.json
+++ b/projects/codesandbox-app/package.json
@@ -88,6 +88,7 @@
     "merge-deep": "^3.0.2",
     "mobx": "^5.14.0",
     "module": "^1.2.5",
+    "monaco-editor": "^0.18.1",
     "monaco-textmate": "^3.0.1",
     "node-services": "^1.0.0",
     "normalize.css": "^8.0.1",
@@ -152,6 +153,7 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "merge-deep": "^3.0.2",
+    "monaco-editor-webpack-plugin": "^1.7.0",
     "parcel-bundler": "^1.12.4",
     "raw-loader": "^3.1.0",
     "rimraf": "^3.0.0",
